[gd_scene load_steps=6 format=2]

[ext_resource path="res://my_assets/retro_tilemap/retro_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://player/player_default.tscn" type="PackedScene" id=2]
[ext_resource path="res://my_assets/skys/build/night_sky_with_mountain.tscn" type="PackedScene" id=3]
[ext_resource path="res://monsters/aggressive/aggressive_creepy_pepper.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/tutorial/tutorial_3.gd" type="Script" id=5]

[node name="Tutorial3" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -1114124, 0, 0, -1114123, 0, 0, -1114122, 0, 0, -1114121, 0, 0, -1114120, 0, 0, -1114119, 0, 0, -1114118, 0, 0, -1114117, 0, 0, -1114116, 0, 0, -1114115, 0, 0, -1114114, 0, 0, -1114113, 0, 0, -1179648, 0, 0, -1179647, 0, 0, -1179646, 0, 0, -1179645, 0, 0, -1179644, 0, 0, -1179643, 0, 0, -1179642, 0, 0, -1179641, 0, 0, -1179640, 0, 0, -1179639, 0, 0, -1179638, 0, 0, -1179637, 0, 0, -1179636, 0, 0, -1179635, 0, 0, -1179634, 0, 0, -1179633, 0, 0, -1179632, 0, 0, -1179631, 0, 0, -1179630, 0, 0, -1179629, 0, 0, -1179628, 0, 0, -1179627, 0, 0, -1179626, 0, 0, -1179625, 0, 0, -1179624, 0, 0, -1179623, 0, 0, -1179622, 0, 0, -1179621, 0, 0, -1179620, 0, 0, -1179619, 0, 0, -1179618, 0, 0, -1179617, 0, 0, -1179616, 0, 0, -1179615, 0, 0, -1179614, 0, 0, -1179613, 0, 0, -1179612, 0, 0, -1179611, 0, 0, -1179610, 0, 0, -1179609, 0, 0, -1179608, 0, 0, -1179607, 0, 0, -1179606, 0, 0, -1179605, 0, 0, -1179604, 0, 0, -1179603, 0, 0, -1048588, 0, 0, -1048587, 1610612737, 0, -1114068, 1073741825, 0, -1114067, 0, 0, -983052, 0, 0, -1048531, 0, 0, -917516, 0, 0, -982995, 0, 0, -851980, 0, 0, -917459, 0, 0, -786444, 0, 0, -851923, 0, 0, -720908, 0, 0, -786387, 0, 0, -655372, 0, 0, -720851, 0, 0, -589836, 0, 0, -655315, 0, 0, -524300, 0, 0, -589779, 0, 0, -458764, 0, 0, -524243, 0, 0, -393228, 0, 0, -458707, 0, 0, -327692, 0, 0, -393171, 0, 0, -262156, 0, 0, -327635, 0, 0, -196620, 0, 0, -262099, 0, 0, -131084, 0, 0, -196563, 0, 0, -65548, 0, 0, -131027, 0, 0, -12, 0, 0, -65491, 0, 0, 65524, 0, 0, 45, 0, 0, 131060, 0, 0, 65581, 0, 0, 196596, 0, 0, 131092, 1, 0, 131093, -1610612735, 0, 131117, 0, 0, 262132, 0, 0, 196627, 1, 0, 196628, 0, 0, 196629, -1610612735, 0, 196630, -1610612735, 0, 196653, 0, 0, 327668, 0, 0, 262162, 1, 0, 262163, 0, 0, 262164, 1, 0, 262165, 0, 0, 262166, -1610612735, 0, 262167, -1610612735, 0, 262189, 0, 0, 393204, 0, 0, 327697, 1, 0, 327698, 0, 0, 327699, -1073741823, 0, 327700, 0, 0, 327701, 1, 0, 327702, 0, 0, 327703, -1610612735, 0, 327704, -1610612735, 0, 327725, 0, 0, 458740, 0, 0, 393232, 1, 0, 393233, 0, 0, 393234, 1610612737, 0, 393237, 0, 0, 393238, 1, 0, 393239, 0, 0, 393240, -1610612735, 0, 393241, -1610612735, 0, 393261, 0, 0, 524276, 0, 0, 458767, 1, 0, 458768, 0, 0, 458769, 1610612737, 0, 458774, 0, 0, 458775, 1, 0, 458776, 0, 0, 458777, -1610612735, 0, 458778, -1610612735, 0, 458797, 0, 0, 589812, 0, 0, 524302, 1, 0, 524303, 0, 0, 524304, 1610612737, 0, 524311, 0, 0, 524312, 1, 0, 524313, 0, 0, 524314, -1610612735, 0, 524315, -1610612735, 0, 524333, 0, 0, 655348, 0, 0, 589837, 1, 0, 589838, 0, 0, 589839, 1610612737, 0, 589848, 0, 0, 589849, 1, 0, 589850, 0, 0, 589851, -1610612735, 0, 589852, -1610612735, 0, 589869, 0, 0, 720884, 0, 0, 655372, 1, 0, 655373, 0, 0, 655374, 1610612737, 0, 655385, 0, 0, 655386, 1, 0, 655387, 0, 0, 655388, -1610612735, 0, 655389, -1610612735, 0, 655405, 0, 0, 786420, 0, 0, 720907, 1, 0, 720908, 0, 0, 720909, 1610612737, 0, 720922, 0, 0, 720923, 1, 0, 720924, 0, 0, 720925, -1610612735, 0, 720926, -1610612735, 0, 720941, 0, 0, 851956, 0, 0, 786442, 1, 0, 786443, 0, 0, 786444, 1610612737, 0, 786459, 0, 0, 786460, 1, 0, 786461, 0, 0, 786462, -1610612735, 0, 786463, -1610612735, 0, 786477, 0, 0, 917492, 0, 0, 851980, 1, 0, 851981, -1610612735, 0, 851996, 0, 0, 851997, 1, 0, 851998, 1, 0, 851999, -1610612735, 0, 852000, -1610612735, 0, 852001, -1610612735, 0, 852013, 0, 0, 983028, 0, 0, 917515, 1, 0, 917516, 1610612736, 0, 917517, 1610612736, 0, 917518, 1610612736, 0, 917519, 1610612736, 0, 917520, 1610612736, 0, 917521, 1610612736, 0, 917522, 1610612736, 0, 917523, 1610612736, 0, 917524, 1610612736, 0, 917525, 1610612736, 0, 917526, 1610612736, 0, 917527, 1610612736, 0, 917528, 1610612736, 0, 917529, 1610612736, 0, 917530, 1610612736, 0, 917531, 1610612736, 0, 917532, 1610612736, 0, 917533, 0, 0, 917534, 1, 0, 917535, -1610612736, 0, 917536, -1610612736, 0, 917537, 1610612737, 0, 917538, -1610612735, 0, 917549, 0, 0, 1048564, 0, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1610612737, 0, 983073, 1610612737, 0, 983085, 0, 0, 1114100, 0, 0, 1048587, -1073741823, 0, 1048588, 1610612737, 0, 1048589, 1610612736, 0, 1048590, 1610612736, 0, 1048591, 1610612736, 0, 1048592, 1610612736, 0, 1048593, 1610612736, 0, 1048594, 1610612736, 0, 1048595, 1610612736, 0, 1048596, 1610612736, 0, 1048597, 1610612736, 0, 1048598, 1610612736, 0, 1048599, 1610612736, 0, 1048600, 1610612736, 0, 1048601, 1610612736, 0, 1048602, 1610612736, 0, 1048603, 1610612736, 0, 1048604, 1610612736, 0, 1048605, -1073741823, 0, 1048606, 1610612737, 0, 1048621, 0, 0, 1179636, 0, 0, 1114125, -1073741823, 0, 1114126, 1610612737, 0, 1114139, -1073741823, 0, 1114140, 1610612737, 0, 1114156, 1, 0, 1114157, 0, 0, 1245172, 0, 0, 1179691, 1, 0, 1179692, 1, 0, 1179693, 0, 0, 1310708, 0, 0, 1245226, 1, 0, 1245227, 1, 0, 1245228, 1, 0, 1245229, 0, 0, 1376244, 0, 0, 1310761, 1, 0, 1310762, 1, 0, 1310763, 1, 0, 1310764, 1, 0, 1310765, 0, 0, 1441780, 0, 0, 1376296, 1, 0, 1376297, 1, 0, 1376298, 1, 0, 1376299, 1, 0, 1376300, 1, 0, 1376301, 0, 0, 1507316, 0, 0, 1441831, 1, 0, 1441832, 1, 0, 1441833, 1, 0, 1441834, 1, 0, 1441835, 1, 0, 1441836, 1, 0, 1441837, 0, 0, 1572852, 0, 0, 1572853, -1610612735, 0, 1507366, 1, 0, 1507367, 1, 0, 1507368, 1, 0, 1507369, 1, 0, 1507370, 1, 0, 1507371, 1, 0, 1507372, 1, 0, 1507373, 0, 0, 1638388, 0, 0, 1638389, 0, 0, 1638390, 0, 0, 1638391, 0, 0, 1638392, 0, 0, 1638393, 0, 0, 1638394, 0, 0, 1638395, 0, 0, 1638396, 0, 0, 1638397, 0, 0, 1638398, 0, 0, 1638399, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0 )

[node name="NightSkyWithMountain" parent="." instance=ExtResource( 3 )]
position = Vector2( 1104.68, 642.68 )
scale = Vector2( 0.936247, 0.936247 )

[node name="AgressiveCreepyPepper" parent="." instance=ExtResource( 4 )]
position = Vector2( 419.14, -90.7691 )
destroyOnHit = true
health = 3.0
speed = 5.0

[node name="AgressiveCreepyPepper2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1944, -504 )
destroyOnHit = true

[node name="AgressiveCreepyPepper3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1264, 736 )
destroyOnHit = true
health = 100.0
speed = 50.0

[node name="AgressiveCreepyPepper4" parent="." instance=ExtResource( 4 )]
position = Vector2( 2226.34, 1408 )
destroyOnHit = true
health = 3.0

[node name="player" parent="." instance=ExtResource( 2 )]
isMyPlayer = true

[connection signal="imDead" from="AgressiveCreepyPepper" to="." method="_on_AgressiveCreepyPepper_imDead"]
[connection signal="imDead" from="AgressiveCreepyPepper2" to="." method="_on_AgressiveCreepyPepper2_imDead"]
[connection signal="imDead" from="AgressiveCreepyPepper3" to="." method="_on_AgressiveCreepyPepper3_imDead"]
[connection signal="imDead" from="AgressiveCreepyPepper4" to="." method="_on_AgressiveCreepyPepper4_imDead"]
